# better-telegram-mcp

./: .code_review_request.md  .dockerignore  .gitignore  .gitleaksignore  .infisical.json  .mise.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  PRIVACY.md  README.md  SECURITY.md  auth_client_diff.patch  auth_server_diff.patch  changes.patch  commit_msg.txt  cov_output.txt  coverage.xml  docker-compose.http.yml  dummy.py  fix.py  fix2.py  fix3.py  fix4.py  fix5.py  fix_ci_issues.py  fix_coverage.py  fix_exceptions.py  fix_indentation.py  fix_robustness.patch  fix_server.py  fix_server_v2.py  fix_tests.py  fix_tests_v3.py  gemini-extension.json  get_mac_paths.py  patch.diff  (+9 more)
.Jules/: palette.md
.claude-plugin/: marketplace.json  plugin.json
.github/: best_practices.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/rulesets/: main.json
.github/workflows/: cd.yml  ci.yml
.jules/: bolt.md  palette.md  sentinel.md
auth-relay/: Dockerfile  server.py
docs/: setup-manual.md  setup-with-agent.md
hooks/: hooks.json
skills/broadcast/: SKILL.md
skills/setup-bot/: SKILL.md
src/better_telegram_mcp/: __init__.py  __init__.py,cover  __main__.py  __main__.py,cover  auth_client.py  auth_server.py  auth_server.py,cover  auth_server.py.orig  auth_terminal.py  cli.py  config.py  config.py,cover  credential_form.py  credential_state.py  relay_schema.py  relay_schema.py,cover  relay_setup.py  relay_setup.py,cover  resources.py  resources.py,cover  server.py  server.py,cover
src/better_telegram_mcp/auth/: AGENTS.md  __init__.py  __init__.py,cover  in_memory_session_store.py  per_user_session_store.py  per_user_session_store.py,cover  stateless_client_store.py  stateless_client_store.py,cover  telegram_auth_provider.py  telegram_auth_provider.py,cover
src/better_telegram_mcp/backends/: AGENTS.md  __init__.py  __init__.py,cover  base.py  base.py,cover  bot_backend.py  bot_backend.py,cover  bot_update_producer.py  security.py  security.py,cover  user_backend.py  user_backend.py,cover
src/better_telegram_mcp/docs/: chats.md  contacts.md  media.md  messages.md
src/better_telegram_mcp/events/: __init__.py  http_event_dispatcher.py  sse_fanout_hub.py  sse_subscriber_hub.py  types.py
src/better_telegram_mcp/tools/: AGENTS.md  __init__.py  __init__.py,cover  chats.py  chats.py,cover  config_tool.py  config_tool.py,cover  contacts.py  contacts.py,cover  help_tool.py  help_tool.py,cover  media.py  media.py,cover  media.py.orig  messages.py  messages.py,cover
src/better_telegram_mcp/transports/: AGENTS.md  __init__.py  __init__.py,cover  credential_store.py  credential_store.py,cover  http.py  http_multi_user.py  oauth_server.py
src/better_telegram_mcp/utils/: formatting.py  formatting.py,cover  secrets.py
tests/: AGENTS.md  conftest.py  conftest_e2e.py  test_auth_client.py  test_auth_server.py  test_auth_server_rate_limit.py  test_auth_server_utils.py  test_auth_terminal.py  test_benchmark_io.py  test_bot_update_producer.py  test_cli.py  test_config.py  test_config_open_relay_registered.py  test_credential_form.py  test_credential_state.py  test_credential_store.py  test_credential_store_cache.py  test_e2e.py  test_event_dispatcher.py  test_event_relay_config.py  test_events_types.py  test_full_live.py  test_http_multi_user.py  test_http_transport.py  test_http_transport_start.py  test_is_user_mode_config.py  test_live_protocol.py  test_main.py  test_oauth_server.py  test_oauth_server_relay_gate.py  test_per_user_session_store.py  test_relay_schema.py  test_relay_setup.py  test_resources.py  test_secret_caching.py  test_security_coverage.py  test_security_download.py  test_server.py  test_session_cache.py  test_sse_config.py  (+6 more)
tests/auth/: test_in_memory_session_store.py
tests/integration/: test_bot_live.py  test_user_live.py
tests/test_backends/: test_base.py  test_bot_backend.py  test_media_ssrf.py  test_security.py  test_ssrf_rebind.py  test_user_backend.py
tests/test_tools/: test_chats.py  test_config_tool.py  test_contacts.py  test_help_tool.py  test_help_tool_cache.py  test_media.py  test_messages.py
tests/test_transports/: test_credential_store.py  test_http.py
tests/test_utils/: test_auth_server_utils.py  test_formatting.py
