[project]
name = "better-telegram-mcp"
version = "1.0.2"
description = "Production-grade MCP server for Telegram — dual-mode Bot API + MTProto, mega-tool pattern"
readme = "README.md"
license = "MIT"
requires-python = "==3.13.*"
authors = [{ name = "n24q02m" }]
keywords = [
    "mcp", "mcp-server", "model-context-protocol",
    "telegram", "telegram-bot", "telegram-api",
    "claude", "claude-code", "cursor",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "mcp[cli]>=1.8.0",
    "httpx>=0.28.0",
    "telethon>=1.40.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "loguru>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.5",
    "ruff>=0.9",
    "ty>=0.0.1a10",
    "pre-commit>=4.0",
]

[project.scripts]
better-telegram-mcp = "better_telegram_mcp.__main__:_cli"

[project.urls]
Homepage = "https://github.com/n24q02m/better-telegram-mcp"
Repository = "https://github.com/n24q02m/better-telegram-mcp"
Issues = "https://github.com/n24q02m/better-telegram-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/better_telegram_mcp"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
timeout = 30
markers = ["integration: integration tests (require Telegram credentials)"]
addopts = "-m 'not integration'"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
unresolved-import = "ignore"
possibly-unresolved-reference = "ignore"

[tool.coverage.run]
source = ["better_telegram_mcp"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 95

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = "pip install build && python -m build"
commit_message = "chore(release): v{version}"
tag_format = "v{version}"
major_on_zero = false

[tool.semantic_release.changelog]
exclude_commit_patterns = ["^chore", "^ci", "^docs", "^style", "^refactor"]

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = true
