[project]
name = "better-telegram-mcp"
version = "4.10.0"
description = "Production-grade MCP server for Telegram — dual-mode Bot API + MTProto, domain-separated tools"
readme = "README.md"
license = { text = "MIT" }
requires-python = "==3.13.*"
authors = [{ name = "n24q02m", email = "quangminh2422004@gmail.com" }]
keywords = [
    "mcp", "mcp-server", "model-context-protocol",
    "telegram", "telegram-bot", "telegram-api",
    "claude", "cursor", "copilot", "antigravity", "codex", "opencode",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "mcp[cli]>=1.27.0",
    "httpx>=0.28.1",
    "telethon>=1.43.2",
    "pydantic>=2.13.4,<2.14",
    "pydantic-settings>=2.14.0",
    "loguru>=0.7.3",
    "n24q02m-mcp-core>=1.13.0",
    "cryptography>=48.0.0",
    "starlette>=1.0.0",
    "uvicorn>=0.46.0",
    "cryptg>=0.6.0",
]
[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.12",
    "ty>=0.0.34",
    "pre-commit>=4.6.0",
]
[project.scripts]
better-telegram-mcp = "better_telegram_mcp.__main__:_cli"
[project.urls]
Homepage = "https://github.com/n24q02m/better-telegram-mcp"
Repository = "https://github.com/n24q02m/better-telegram-mcp"
Issues = "https://github.com/n24q02m/better-telegram-mcp/issues"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/better_telegram_mcp"]
[tool.hatch.build.targets.wheel.sources]
"src" = ""
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["tests"]
timeout = 30
markers = [
    "integration: integration tests (require Telegram credentials)",
    "live: live MCP protocol tests (spawns server subprocess)",
    "full: full/real bot mode tests via MCP protocol (requires bot token + chat)",
    "e2e: end-to-end tests via MCP protocol (requires credentials + setup mode)",
]
addopts = "-m 'not integration and not live and not full and not e2e'"
[tool.ruff]
target-version = "py313"
line-length = 88
[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]
[tool.ruff.format]
quote-style = "double"
[tool.ty.environment]
python-version = "3.13"
[tool.ty.rules]
unresolved-import = "ignore"
possibly-unresolved-reference = "ignore"
unresolved-attribute = "ignore"
invalid-return-type = "ignore"
invalid-argument-type = "ignore"
not-iterable = "ignore"
invalid-assignment = "ignore"
invalid-method-override = "ignore"
empty-body = "ignore"
[tool.coverage.run]
source = ["better_telegram_mcp"]
omit = [
    "tests/*",
]
[tool.coverage.report]
fail_under = 95
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [".claude-plugin/plugin.json:version", "server.json:version"]
tag_format = "v{version}"
commit_message = "chore(release): v{version}"
major_on_zero = false
[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
[tool.semantic_release.remote]
type = "github"

[tool.uv.sources]
n24q02m-mcp-core = { path = "../mcp-core/packages/core-py" }
